--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Watch Worthy</title>
+  <title>The Watch Worthy – Curated Intellectual YouTube Videos</title>
+  <meta name="description" content="Discover the best intellectual and educational YouTube videos, curated for curious minds. No distractions, just one great video every time you visit.">
+  <meta property="og:title" content="The Watch Worthy – Curated Intellectual YouTube Videos">
+  <meta property="og:description" content="Discover the best intellectual and educational YouTube videos, curated for curious minds. No distractions, just one great video every time you visit.">
+  <meta property="og:image" content="assets/thewatchworthy-og-image.webp">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.thewatchworthy.com/">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
   <script src="https://unpkg.com/lucide@latest"></script>
